// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`textDecorationColor renders 0 1`] = `
Array [
  .c0 {
  -webkit-text-decoration-color: #0;
  text-decoration-color: #0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-color: #0;
  text-decoration-color: #0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-color: #0;
  text-decoration-color: #0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-color: #0;
  text-decoration-color: #0;
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationColor renders function 1`] = `
Array [
  .c0 {
  -webkit-text-decoration-color: hasnot;
  text-decoration-color: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-color: has;
  text-decoration-color: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-color: hasnot;
  text-decoration-color: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-color: has;
  text-decoration-color: has;
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationColor renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-text-decoration-color: invalid.path.1;
  text-decoration-color: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-color: invalid.path.1;
  text-decoration-color: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-color: invalid.path.1;
  text-decoration-color: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-color: invalid.path.1;
  text-decoration-color: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationColor renders negative number 1`] = `
Array [
  .c0 {
  -webkit-text-decoration-color: #-54881;
  text-decoration-color: #-54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-color: #-54881;
  text-decoration-color: #-54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-color: #-42365;
  text-decoration-color: #-42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-color: #-42365;
  text-decoration-color: #-42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationColor renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-color: July;
    text-decoration-color: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-color: August;
    text-decoration-color: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-color: September;
    text-decoration-color: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-text-decoration-color: November;
    text-decoration-color: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-color: July;
    text-decoration-color: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-color: August;
    text-decoration-color: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-color: September;
    text-decoration-color: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-text-decoration-color: November;
    text-decoration-color: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-color: May;
    text-decoration-color: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-color: June;
    text-decoration-color: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-color: April;
    text-decoration-color: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-text-decoration-color: November;
    text-decoration-color: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-color: May;
    text-decoration-color: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-color: June;
    text-decoration-color: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-color: April;
    text-decoration-color: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-text-decoration-color: November;
    text-decoration-color: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationColor renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    -webkit-text-decoration-color: July;
    text-decoration-color: July;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-color: August;
    text-decoration-color: August;
  }
}

@media January {
  .c0 {
    -webkit-text-decoration-color: September;
    text-decoration-color: September;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-color: November;
    text-decoration-color: November;
  }
}

@media June {
  .c0 {
    -webkit-text-decoration-color: August;
    text-decoration-color: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-text-decoration-color: July;
    text-decoration-color: July;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-color: August;
    text-decoration-color: August;
  }
}

@media January {
  .c0 {
    -webkit-text-decoration-color: September;
    text-decoration-color: September;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-color: November;
    text-decoration-color: November;
  }
}

@media June {
  .c0 {
    -webkit-text-decoration-color: August;
    text-decoration-color: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-text-decoration-color: January;
    text-decoration-color: January;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-color: December;
    text-decoration-color: December;
  }
}

@media January {
  .c0 {
    -webkit-text-decoration-color: April;
    text-decoration-color: April;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-color: May;
    text-decoration-color: May;
  }
}

@media June {
  .c0 {
    -webkit-text-decoration-color: June;
    text-decoration-color: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-text-decoration-color: January;
    text-decoration-color: January;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-color: December;
    text-decoration-color: December;
  }
}

@media January {
  .c0 {
    -webkit-text-decoration-color: April;
    text-decoration-color: April;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-color: May;
    text-decoration-color: May;
  }
}

@media June {
  .c0 {
    -webkit-text-decoration-color: June;
    text-decoration-color: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationColor renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-text-decoration-color: #54881;
  text-decoration-color: #54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-color: #54881;
  text-decoration-color: #54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-color: #42365;
  text-decoration-color: #42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-color: #42365;
  text-decoration-color: #42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationColor renders string 1`] = `
Array [
  .c0 {
  -webkit-text-decoration-color: July;
  text-decoration-color: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-color: July;
  text-decoration-color: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-color: June;
  text-decoration-color: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-color: June;
  text-decoration-color: June;
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationColor renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-text-decoration-color: DarkSlateBlue;
  text-decoration-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-color: DarkSlateBlue;
  text-decoration-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-color: DarkSlateBlue;
  text-decoration-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-color: DarkSlateBlue;
  text-decoration-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
